Fix Demo help text

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
     <main>
         <section id="maindemossection">
             <div class="wrapper">
-                <h2>Demos (push the red button to record a frame)</h2>
+                <h2>Demos</h2>
                 <div class="gallery">
                     <article class="gallery-item" itemscope="" itemtype="http://schema.org/CreativeWork">
                         <a title="INSTANCED BONES" class="gallery-item-link" href="./Demos/InstancedBones/" target="blank" itemprop="url">
