--- a/Demos/InstancedBones/index.html
+++ b/Demos/InstancedBones/index.html
@@ -74,5 +74,27 @@
     </div>
     <div id="notSupported" class="hidden">Sorry but your browser does not support WebGL...</div>
     <script src="../../js/loaderCustoms.js"></script>
+    <div class="helpText">After loading, press the red button in the menu above to create a Webgl Capture.</div>
+    <style>
+        .captureMenuComponent {
+            opacity: 1;
+        }
+        .helpText {
+            position: absolute;
+            z-index: 100000;
+            top: 50px;
+            left: 50%;
+            margin-left: -200px;
+            padding: 10px;
+            height: 50px;
+            width: 380px;
+            background-color: #222;
+            opacity: 1;
+            color: #f9f9f9;
+            font-family: Consolas,monaco,monospace;
+            font-size: 14px;
+            font-weight: 500;
+        }
+    </style>
 </body>
 </html>
