add debug pages

--- a/Demos/InstancedBones/index.html
+++ b/Demos/InstancedBones/index.html
@@ -74,7 +74,7 @@
     </div>
     <div id="notSupported" class="hidden">Sorry but your browser does not support WebGL...</div>
     <script src="../../js/loaderCustoms.js"></script>
-    <div class="helpText">After loading, press the red button in the menu above to create a Webgl Capture.</div>
+    <div class="helpText">Once loaded, press the red button in the menu above to create a Webgl Capture.</div>
     <style>
         .captureMenuComponent {
             opacity: 1;
