--- a/Demos/PBR/index-debug.html
+++ b/Demos/PBR/index-debug.html
@@ -2,8 +2,7 @@
 <html>
 <head>
     <meta name="viewport" content="width=device-width">
-    <meta name="description" content="Sponza by Babylon.js with realtime point light shadows using dynamic cubemaps">
-    <title>Babylon.js - Sponza Dynamic Shadows</title>
+    <title>Babylon.js - PBR demo</title>
     <script src="//cdn.webglstats.com/stat.js" defer="defer" async="async"></script>
     <script>
         (function (i, s, o, g, r, a, m) {
@@ -18,8 +17,13 @@
     </script>
     <link href="../../css/index.css" rel="stylesheet" />
     <script src="http://code.jquery.com/pep/0.4.0/pep.min.js"></script>
-    <script src="../../spector.bundle.js"></script>
+    <link href="../../prism.css" rel="stylesheet" />
+    <link href="../../spector.css" rel="stylesheet" />
+    <script src="../../prism.js"></script>
+    <script src="../../spector.js"></script>
     <script src="../../babylon.js"></script>
+    <script src="babylon.pbrMaterial.min.js"></script>
+	<script src="pbr.js"></script>
     <script src="demo.js"></script>
 </head>
 <body>
@@ -73,7 +77,7 @@
         <div class="cameraTag" id="cameraClickableTag"></div>
     </div>
     <div id="notSupported" class="hidden">Sorry but your browser does not support WebGL...</div>
-    <script src="../../js/loader.js"></script>
+    <script src="../../js/loaderCustoms.js"></script>
     <div class="helpText">Once loaded, press the red button in the menu above to create a Webgl Capture.</div>
     <style>
         .captureMenuComponent {
