--- a/Demos/SponzaDynamicShadows/index-debug.html
+++ b/Demos/SponzaDynamicShadows/index-debug.html
@@ -18,7 +18,10 @@
     </script>
     <link href="../../css/index.css" rel="stylesheet" />
     <script src="http://code.jquery.com/pep/0.4.0/pep.min.js"></script>
-    <script src="../../spector.bundle.js"></script>
+    <link href="../../prism.css" rel="stylesheet" />
+    <link href="../../spector.css" rel="stylesheet" />
+    <script src="../../prism.js"></script>
+    <script src="../../spector.js"></script>
     <script src="../../babylon.js"></script>
     <script src="demo.js"></script>
 </head>
