--- a/Demos/InstancedBones/index.html
+++ b/Demos/InstancedBones/index.html
@@ -24,7 +24,7 @@
 </head>
 <body>
     <canvas id="renderCanvas" touch-action="none"></canvas>
-    <div id="fps"></div>
+    <div id="fps" style="display:none;visibility:hidden;"></div>
     <div id="stats"></div>
     <div id="status"></div>
     <div id="controlPanel" style="display:none;visibility:hidden;">
@@ -39,7 +39,7 @@
         <div class="tag">Control panel</div>
         <div class="tag" id="clickableTag"></div>
     </div>
-    <div id="cameraPanel">
+    <div id="cameraPanel" style="display:none;visibility:hidden;">
         <div id="cameraControlsZone">
             Active camera:<br>
             <select id="camerasList"></select>
@@ -81,7 +81,7 @@
         }
         .helpText {
             position: absolute;
-            z-index: 100000;
+            z-index: 20;
             top: 50px;
             left: 50%;
             margin-left: -200px;
