--- a/Demos/PBR/index.html
+++ b/Demos/PBR/index.html
@@ -25,7 +25,7 @@
 </head>
 <body>
     <canvas id="renderCanvas" touch-action="none"></canvas>
-    <div id="fps"></div>
+    <div id="fps" style="display:none;visibility:hidden;"></div>
     <div id="stats"></div>
     <div id="status"></div>
     <div id="controlPanel" style="display:none;visibility:hidden;">
@@ -40,7 +40,7 @@
         <div class="tag">Control panel</div>
         <div class="tag" id="clickableTag"></div>
     </div>
-    <div id="cameraPanel">
+    <div id="cameraPanel" style="display:none;visibility:hidden;">
         <div id="cameraControlsZone">
             Active camera:<br>
             <select id="camerasList"></select>
@@ -83,7 +83,7 @@
 
         .helpText {
             position: absolute;
-            z-index: 100000;
+            z-index: 20;
             top: 50px;
             left: 50%;
             margin-left: -200px;
