Move spector js dependency to cdn to avoid double maintenance

--- a/Demos/InstancedBones/index-debug.html
+++ b/Demos/InstancedBones/index-debug.html
@@ -16,11 +16,11 @@
         ga('send', 'pageview');
     </script>
     <link href="../../css/index.css" rel="stylesheet" />
-    <script src="http://code.jquery.com/pep/0.4.0/pep.min.js"></script>
-    <link href="../../prism.css" rel="stylesheet" />
-    <link href="../../spector.css" rel="stylesheet" />
-    <script src="../../prism.js"></script>
-    <script src="../../spector.js"></script>
+    <script src="https://code.jquery.com/pep/0.4.0/pep.min.js"></script>
+    <link href="https://spectorcdn.netlify.com/prism.css" rel="stylesheet" />
+    <link href="https://spectorcdn.netlify.com/spector.css" rel="stylesheet" />
+    <script src="https://spectorcdn.netlify.com/prism.js"></script>
+    <script src="https://spectorcdn.netlify.com/spector.js"></script>
     <script src="../../babylon.js"></script>
 	<script src="bones2.js"></script>
     <script src="demo.js"></script>
