--- a/Demos/InstancedBones/index.html
+++ b/Demos/InstancedBones/index.html
@@ -16,7 +16,7 @@
         ga('send', 'pageview');
     </script>
     <link href="../../css/index.css" rel="stylesheet" />
-    <script src="http://code.jquery.com/pep/0.4.0/pep.min.js"></script>
+    <script src="https://code.jquery.com/pep/0.4.0/pep.min.js"></script>
     <script src="https://spectorcdn.netlify.com/spector.bundle.js"></script>
     <script src="../../babylon.js"></script>
 	<script src="bones2.js"></script>
