--- a/Demos/PBR/index.html
+++ b/Demos/PBR/index.html
@@ -16,8 +16,8 @@
         ga('send', 'pageview');
     </script>
     <link href="../../css/index.css" rel="stylesheet" />
-    <script src="http://code.jquery.com/pep/0.4.0/pep.min.js"></script>
-    <script src="../../spector.bundle.js"></script>
+    <script src="https://code.jquery.com/pep/0.4.0/pep.min.js"></script>
+    <script src="https://spectorcdn.netlify.com/spector.bundle.js"></script>
     <script src="../../babylon.js"></script>
     <script src="babylon.pbrMaterial.min.js"></script>
 	<script src="pbr.js"></script>
