--- a/Demos/SponzaDynamicShadows/index.html
+++ b/Demos/SponzaDynamicShadows/index.html
@@ -17,8 +17,8 @@
         ga('send', 'pageview');
     </script>
     <link href="../../css/index.css" rel="stylesheet" />
-    <script src="http://code.jquery.com/pep/0.4.0/pep.min.js"></script>
-    <script src="../../spector.bundle.js"></script>
+    <script src="https://code.jquery.com/pep/0.4.0/pep.min.js"></script>
+    <script src="https://spectorcdn.netlify.com/spector.bundle.js"></script>
     <script src="../../babylon.js"></script>
     <script src="demo.js"></script>
 </head>
