--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 Lead developers: <a href="https://twitter.com/spectorseb">Spector Seb</a>
             </p>
             <p>
-                Core contributors: <a href="https://twitter.com/deltakosh">David Catuhe</a> - <a href="https://twitter.com/davrous">David Rousset</a>
+                Core contributors: <a href="https://twitter.com/deltakosh">David Catuhe</a> - <a href="https://twitter.com/Temechon">Julian Chenard</a> - <a href="https://twitter.com/davrous">David Rousset</a>
             </p>
         </div>
     </footer>
