All good after the CSS changes

--- a/Demos/PBR/index-debug.html
+++ b/Demos/PBR/index-debug.html
@@ -81,24 +81,25 @@
     <div class="helpText">Once loaded, press the red button in the menu above to create a Webgl Capture.</div>
     <style>
         .captureMenuComponent {
-            opacity: 1;
+            background-color: rgba(34, 34, 34, 1);
         }
-
         .helpText {
             position: absolute;
             z-index: 20;
-            top: 50px;
+            top: 56px;
             left: 50%;
-            margin-left: -200px;
+            margin-left: -209px;
             padding: 10px;
             height: 50px;
-            width: 380px;
-            background-color: #222;
+            width: 394px;
             opacity: 1;
             color: #f9f9f9;
             font-family: Consolas,monaco,monospace;
             font-size: 14px;
             font-weight: 500;
+            border: 2px solid #222;
+            background-color: rgba(34, 34, 34, 1);
+            border-radius: 5px;
         }
     </style>
 </body>
