--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="wrapper">
             <div class="banner">
                 <div class="banner-item">
-                    <h1><img src="img/layout/logo-spectorjs.svg" alt="BabylonJS"></h1>
+                    <h1><img src="assets/spectorjs.svg" alt="BabylonJS"></h1>
                 </div>
                 <div class="banner-item"></div>
                 <div class="banner-item">
