--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <div class="download-bar">
         <div class="wrapper">
-            <a class="button-red" href="#maindemossection" title="Try SpectorJS">Try</a>
+            <a class="button-red" href="#featuresdemossection" title="Try SpectorJS">Try</a>
             <a class="button-green" href="https://raw.githubusercontent.com/BabylonJS/Spector.js/master/dist/spector.bundle.js" title="Download">Download</a>
             <a class="button-blue" href="https://github.com/BabylonJS/Spector.js" title="GitHub">GitHub</a>
         </div>
@@ -79,6 +79,7 @@
 
     <nav class="navigation">
         <div class="wrapper">
+            <a href="#maindemossection">Introduction</a>
             <a href="#specifications">Specifications</a>
             <a href="https://github.com/BabylonJS/Spector.js">GitHub</a>
             <a href="https://github.com/BabylonJS/Spector.js">Documentation</a>
@@ -88,6 +89,24 @@
 
     <main>
         <section id="maindemossection">
+            <div class="wrapper">
+                <h2>Videos</h2>
+                <div class="gallery">
+                    <article class="gallery-item" itemscope="" itemtype="http://schema.org/CreativeWork">
+                        <a title="INSTANCED BONES" style="margin:0.5em; position: relative; display: block; margin: .5em; overflow: hidden; color: white;" href="./Demos/InstancedBones/" target="blank" itemprop="url">
+                            <iframe width="400px" height="250px" class="gallery-item-img" src="https://www.youtube.com/embed/8XQrcEe9TP8?ecver=1" frameborder="0" allowfullscreen></iframe>
+                        </a>
+                    </article>
+                    <article class="gallery-item" itemscope="" itemtype="http://schema.org/CreativeWork">
+                        <a title="INSTANCED BONES" style="margin:0.5em; position: relative; display: block; margin: .5em; overflow: hidden; color: white;" href="./Demos/InstancedBones/" target="blank" itemprop="url">
+                            <iframe width="400px" height="250px" class="gallery-item-img" src="https://www.youtube.com/embed/Dp2tL4FvRVk" frameborder="0" allowfullscreen></iframe>
+                        </a>
+                    </article>
+                </div>
+            </div>
+        </section>
+
+        <section id="featuresdemossection">
             <div class="wrapper">
                 <h2>Demos</h2>
                 <div class="gallery">
