Change Twitter Handle

--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 
     <!-- Twitter -->
     <meta name="twitter:card" content="summary" />
-    <meta name="twitter:site" content="@SpectorSeb" />
-    <meta name="twitter:creator" content="@SpectorSeb" />
+    <meta name="twitter:site" content="@SpectorJS" />
+    <meta name="twitter:creator" content="@SpectorJS" />
     <meta name="twitter:url" content="http://spector.babylonjs.com" />
     <meta name="twitter:title" content="Babylon.js demos & documentation" />
     <meta name="twitter:description" content="SpectorJS is an Open source toolking helping to Explore and Troubleshoot your WebGL scenes with ease." />
@@ -181,7 +181,7 @@
     <footer>
         <div class="wrapper">
             <p>
-                Lead developers: <a href="https://twitter.com/spectorseb">Spector Seb</a>
+                Lead developers: Seb
             </p>
             <p>
                 Core contributors: <a href="https://twitter.com/deltakosh">David Catuhe</a> - <a href="https://twitter.com/Temechon">Julian Chenard</a> - <a href="https://twitter.com/davrous">David Rousset</a>
