--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
     <footer>
         <div class="wrapper">
             <p>
-                Lead developers: Seb
+                Lead developers: <a href="https://github.com/sebavan">Seb</a>
             </p>
             <p>
                 Core contributors: <a href="https://twitter.com/deltakosh">David Catuhe</a> - <a href="https://twitter.com/Temechon">Julian Chenard</a> - <a href="https://twitter.com/davrous">David Rousset</a>
