--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     <div class="download-bar">
         <div class="wrapper">
             <a class="button-red" href="#featuresdemossection" title="Try SpectorJS">Try</a>
-            <a class="button-green" href="https://raw.githubusercontent.com/BabylonJS/Spector.js/master/dist/spector.bundle.js" title="Download">Download</a>
+            <a class="button-green" href="https://www.npmjs.com/package/spectorjs" title="Download">Download</a>
             <a class="button-blue" href="https://github.com/BabylonJS/Spector.js" title="GitHub">GitHub</a>
         </div>
     </div>
