--- a/Demos/SponzaDynamicShadows/index-debug.html
+++ b/Demos/SponzaDynamicShadows/index-debug.html
@@ -18,10 +18,10 @@
     </script>
     <link href="../../css/index.css" rel="stylesheet" />
     <script src="https://code.jquery.com/pep/0.4.0/pep.min.js"></script>
-    <link href="https://spectorcdn.netlify.com/prism.css" rel="stylesheet" />
-    <link href="https://spectorcdn.netlify.com/spector.css" rel="stylesheet" />
-    <script src="https://spectorcdn.netlify.com/prism.js"></script>
-    <script src="https://spectorcdn.netlify.com/spector.js"></script>
+    <link href="https://spectorcdn.babylonjs.com/prism.css" rel="stylesheet" />
+    <link href="https://spectorcdn.babylonjs.com/spector.css" rel="stylesheet" />
+    <script src="https://spectorcdn.babylonjs.com/prism.js"></script>
+    <script src="https://spectorcdn.babylonjs.com/spector.js"></script>
     <script src="../../babylon.js"></script>
     <script src="demo.js"></script>
 </head>
