add chrome extension

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 
     <div class="download-bar">
         <div class="wrapper">
-            <a class="button-red" href="#featuresdemossection" title="Try SpectorJS">Try</a>
+            <a class="button-red" href="#thirdpartydemossection" title="Try SpectorJS">Try</a>
             <a class="button-green" href="https://www.npmjs.com/package/spectorjs" title="Download">Download</a>
             <a class="button-blue" href="https://github.com/BabylonJS/Spector.js" title="GitHub">GitHub</a>
         </div>
@@ -80,9 +80,9 @@
     <nav class="navigation">
         <div class="wrapper">
             <a href="#maindemossection">Introduction</a>
-            <a href="#specifications">Specifications</a>
-            <a href="https://github.com/BabylonJS/Spector.js">GitHub</a>
+            <a href="#featuresdemossection">Install</a>
             <a href="https://github.com/BabylonJS/Spector.js">Documentation</a>
+            <a href="#specifications">Specifications</a>
             <a href="http://www.babylonjs.com">Babylon JS</a>
         </div>
     </nav>
@@ -107,6 +107,26 @@
         </section>
 
         <section id="featuresdemossection">
+            <div class="wrapper">
+                <h2>Browser Extension</h2>
+                <div class="gallery">
+                    <article class="gallery-item" itemscope="" itemtype="http://schema.org/CreativeWork">
+                        <a title="CHROME" class="gallery-item-link" href="https://chrome.google.com/webstore/detail/spectorjs/denbgaamihkadbghdceggmchnflmhpmk" target="blank" itemprop="url">
+                            <img class="gallery-item-img" alt="Chrome extension" src="./img/chromeWebStore.png"
+                                 itemprop="image">
+                            <div class="gallery-item-infos">
+                                <h3 class="gallery-item-title" itemprop="name">CHROME</h3>
+                                <div class="gallery-item-others">
+                                    <div class="gallery-item-size"></div>
+                                </div>
+                            </div>
+                        </a>
+                    </article>
+                </div>
+            </div>
+        </section>
+
+        <section id="thirdpartydemossection">
             <div class="wrapper">
                 <h2>Demos</h2>
                 <div class="gallery">
@@ -148,12 +168,9 @@
                             </div>
                         </a>
                     </article>
-
                 </div>
             </div>
         </section>
-
-        <hr class="margin">
 
         <section class="about" id="specifications">
             <div class="wrapper">
