Add firefox extension

--- a/index.html
+++ b/index.html
@@ -122,6 +122,18 @@
                             </div>
                         </a>
                     </article>
+                    <article class="gallery-item" itemscope="" itemtype="http://schema.org/CreativeWork">
+                        <a title="FIREFOX" class="gallery-item-link" href="https://addons.mozilla.org/en-US/firefox/addon/spector-js/" target="blank" itemprop="url">
+                            <img class="gallery-item-img" alt="Firefox extension" src="./img/mozillaWebStore.png"
+                                 itemprop="image">
+                            <div class="gallery-item-infos">
+                                <h3 class="gallery-item-title" itemprop="name">FIREFOX</h3>
+                                <div class="gallery-item-others">
+                                    <div class="gallery-item-size"></div>
+                                </div>
+                            </div>
+                        </a>
+                    </article>
                 </div>
             </div>
         </section>
