Remove FF extension as with no review it limits to v43

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
                             </div>
                         </a>
                     </article>
-                    <article class="gallery-item" itemscope="" itemtype="http://schema.org/CreativeWork">
+                    <!--<article class="gallery-item" itemscope="" itemtype="http://schema.org/CreativeWork">
                         <a title="FIREFOX" class="gallery-item-link" href="https://addons.mozilla.org/en-US/firefox/addon/spector-js/" target="blank" itemprop="url">
                             <img class="gallery-item-img" alt="Firefox extension" src="./img/mozillaWebStore.png"
                                  itemprop="image">
@@ -133,7 +133,7 @@
                                 </div>
                             </div>
                         </a>
-                    </article>
+                    </article>-->
                 </div>
             </div>
         </section>
