--- a/index.html
+++ b/index.html
@@ -102,6 +102,18 @@
                             <iframe width="400px" height="250px" class="gallery-item-img" src="https://www.youtube.com/embed/Dp2tL4FvRVk" frameborder="0" allowfullscreen></iframe>
                         </a>
                     </article>
+                    <article class="gallery-item" itemscope="" itemtype="http://schema.org/CreativeWork">
+                        <a title="GETTING STARTED" class="gallery-item-link" href="http://www.realtimerendering.com/blog/debugging-webgl-with-spectorjs/" target="blank" itemprop="url">
+                            <img class="gallery-item-img" alt="Chrome extension" src="./img/gettingStarted.png"
+                                 itemprop="image">
+                            <div class="gallery-item-infos">
+                                <h3 class="gallery-item-title" itemprop="name">Getting Started</h3>
+                                <div class="gallery-item-others">
+                                    <div class="gallery-item-size"></div>
+                                </div>
+                            </div>
+                        </a>
+                    </article>
                 </div>
             </div>
         </section>
@@ -144,7 +156,7 @@
                 <div class="gallery">
                     <article class="gallery-item" itemscope="" itemtype="http://schema.org/CreativeWork">
                         <a title="INSTANCED BONES" class="gallery-item-link" href="./Demos/InstancedBones/" target="blank" itemprop="url">
-                            <img class="gallery-item-img" alt="WebGL scene for INSTANCED BONES" src="http://cdn.babylonjs.com/wwwbabylonjs/Screenshots/bones2.jpg"
+                            <img class="gallery-item-img" alt="WebGL scene for INSTANCED BONES" src="https://www.babylonjs.com/Screenshots/bones2.jpg"
                                  itemprop="image">
                             <div class="gallery-item-infos">
                                 <h3 class="gallery-item-title" itemprop="name">BONES</h3>
@@ -157,7 +169,7 @@
                     <article class="gallery-item" itemscope="" itemtype="http://schema.org/CreativeWork">
                         <a title="PBR" class="gallery-item-link" href="./Demos/PBR/" target="blank"
                            itemprop="url">
-                            <img class="gallery-item-img" alt="WebGL scene for PBR demo" src="http://cdn.babylonjs.com/wwwbabylonjs/Screenshots/pbr.jpg"
+                            <img class="gallery-item-img" alt="WebGL scene for PBR demo" src="https://www.babylonjs.com/Screenshots/pbr.jpg"
                                  itemprop="image">
                             <div class="gallery-item-infos">
                                 <h3 class="gallery-item-title" itemprop="name">PBR</h3>
@@ -170,7 +182,7 @@
                     <article class="gallery-item" itemscope="" itemtype="http://schema.org/CreativeWork">
                         <a title="Sponza Dynamic Shadows" class="gallery-item-link" href="./demos/SponzaDynamicShadows/" target="blank"
                            itemprop="url">
-                            <img class="gallery-item-img" alt="WebGL scene for Sponza Dynamic Shadows demo" src="http://cdn.babylonjs.com/wwwbabylonjs/Screenshots/SponzaDS.jpg"
+                            <img class="gallery-item-img" alt="WebGL scene for Sponza Dynamic Shadows demo" src="https://www.babylonjs.com//Screenshots/SponzaDS.jpg"
                                  itemprop="image">
                             <div class="gallery-item-infos">
                                 <h3 class="gallery-item-title" itemprop="name">SHADOWS</h3>
