--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <main>
         <section id="maindemossection">
             <div class="wrapper">
-                <h2>Videos</h2>
+                <h2>Introduction</h2>
                 <div class="gallery">
                     <article class="gallery-item" itemscope="" itemtype="http://schema.org/CreativeWork">
                         <a title="INSTANCED BONES" style="margin:0.5em; position: relative; display: block; margin: .5em; overflow: hidden; color: white;" href="./Demos/InstancedBones/" target="blank" itemprop="url">
@@ -105,7 +105,7 @@
                     <article class="gallery-item" itemscope="" itemtype="http://schema.org/CreativeWork">
                         <a title="GETTING STARTED" class="gallery-item-link" href="http://www.realtimerendering.com/blog/debugging-webgl-with-spectorjs/" target="blank" itemprop="url">
                             <img class="gallery-item-img" alt="Chrome extension" src="./img/gettingStarted.png"
-                                 itemprop="image">
+                                 itemprop="image" style="height: 250px;">
                             <div class="gallery-item-infos">
                                 <h3 class="gallery-item-title" itemprop="name">Getting Started</h3>
                                 <div class="gallery-item-others">
