--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
             <a href="#featuresdemossection">Install</a>
             <a href="https://github.com/BabylonJS/Spector.js">Documentation</a>
             <a href="#specifications">Specifications</a>
-            <a href="http://www.babylonjs.com">Babylon JS</a>
+            <a href="//www.babylonjs.com">Babylon JS</a>
         </div>
     </nav>
 
@@ -156,7 +156,7 @@
                 <div class="gallery">
                     <article class="gallery-item" itemscope="" itemtype="http://schema.org/CreativeWork">
                         <a title="INSTANCED BONES" class="gallery-item-link" href="./Demos/InstancedBones/" target="blank" itemprop="url">
-                            <img class="gallery-item-img" alt="WebGL scene for INSTANCED BONES" src="https://www.babylonjs.com/Screenshots/bones2.jpg"
+                            <img class="gallery-item-img" alt="WebGL scene for INSTANCED BONES" src="//www.babylonjs.com/Screenshots/bones2.jpg"
                                  itemprop="image">
                             <div class="gallery-item-infos">
                                 <h3 class="gallery-item-title" itemprop="name">BONES</h3>
@@ -169,7 +169,7 @@
                     <article class="gallery-item" itemscope="" itemtype="http://schema.org/CreativeWork">
                         <a title="PBR" class="gallery-item-link" href="./Demos/PBR/" target="blank"
                            itemprop="url">
-                            <img class="gallery-item-img" alt="WebGL scene for PBR demo" src="https://www.babylonjs.com/Screenshots/pbr.jpg"
+                            <img class="gallery-item-img" alt="WebGL scene for PBR demo" src="//www.babylonjs.com/Screenshots/pbr.jpg"
                                  itemprop="image">
                             <div class="gallery-item-infos">
                                 <h3 class="gallery-item-title" itemprop="name">PBR</h3>
@@ -182,7 +182,7 @@
                     <article class="gallery-item" itemscope="" itemtype="http://schema.org/CreativeWork">
                         <a title="Sponza Dynamic Shadows" class="gallery-item-link" href="./demos/SponzaDynamicShadows/" target="blank"
                            itemprop="url">
-                            <img class="gallery-item-img" alt="WebGL scene for Sponza Dynamic Shadows demo" src="https://www.babylonjs.com//Screenshots/SponzaDS.jpg"
+                            <img class="gallery-item-img" alt="WebGL scene for Sponza Dynamic Shadows demo" src="//www.babylonjs.com//Screenshots/SponzaDS.jpg"
                                  itemprop="image">
                             <div class="gallery-item-infos">
                                 <h3 class="gallery-item-title" itemprop="name">SHADOWS</h3>
