--- a/Demos/PBR/index.html
+++ b/Demos/PBR/index.html
@@ -18,7 +18,7 @@
     <link href="../../css/index.css" rel="stylesheet" />
     <script src="https://code.jquery.com/pep/0.4.0/pep.min.js"></script>
     <script src="https://spectorcdn.babylonjs.com/spector.bundle.js"></script>
-    <script src="../../babylon.js"></script>
+    <script src="../../babylon.new.js"></script>
 	<script src="pbr.js"></script>
     <script src="demo.js"></script>
 </head>
