--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
                 Lead developers: <a href="https://github.com/sebavan">Seb</a>
             </p>
             <p>
-                Core contributors: <a href="https://twitter.com/deltakosh">David Catuhe</a> - <a href="https://twitter.com/Temechon">Julian Chenard</a> - <a href="https://twitter.com/davrous">David Rousset</a>
+                Core contributors: <a href="https://twitter.com/deltakosh">David Catuhe</a>
             </p>
             <p>
                 <img class="netlifyLogo" src="assets/netlify.svg" /><a href="https://www.netlify.com" target="_blank">Deployed by netlify</a>
