Fix Spector WebSite

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
                 <div class="gallery">
                     <article class="gallery-item" itemscope="" itemtype="http://schema.org/CreativeWork">
                         <a title="INSTANCED BONES" class="gallery-item-link" href="./Demos/InstancedBones/" target="blank" itemprop="url">
-                            <img class="gallery-item-img" alt="WebGL scene for INSTANCED BONES" src="//www.babylonjs.com/Screenshots/bones2.jpg"
+                            <img class="gallery-item-img" alt="WebGL scene for INSTANCED BONES" src="/assets/bones2.jpg"
                                  itemprop="image">
                             <div class="gallery-item-infos">
                                 <h3 class="gallery-item-title" itemprop="name">BONES</h3>
@@ -168,7 +168,7 @@
                     <article class="gallery-item" itemscope="" itemtype="http://schema.org/CreativeWork">
                         <a title="PBR" class="gallery-item-link" href="./Demos/PBR/" target="blank"
                            itemprop="url">
-                            <img class="gallery-item-img" alt="WebGL scene for PBR demo" src="//www.babylonjs.com/Screenshots/pbr.jpg"
+                            <img class="gallery-item-img" alt="WebGL scene for PBR demo" src="/assets/pbr.jpg"
                                  itemprop="image">
                             <div class="gallery-item-infos">
                                 <h3 class="gallery-item-title" itemprop="name">PBR</h3>
@@ -181,7 +181,7 @@
                     <article class="gallery-item" itemscope="" itemtype="http://schema.org/CreativeWork">
                         <a title="Sponza Dynamic Shadows" class="gallery-item-link" href="./demos/SponzaDynamicShadows/" target="blank"
                            itemprop="url">
-                            <img class="gallery-item-img" alt="WebGL scene for Sponza Dynamic Shadows demo" src="//www.babylonjs.com//Screenshots/SponzaDS.jpg"
+                            <img class="gallery-item-img" alt="WebGL scene for Sponza Dynamic Shadows demo" src="/assets/SponzaDS.jpg"
                                  itemprop="image">
                             <div class="gallery-item-infos">
                                 <h3 class="gallery-item-title" itemprop="name">SHADOWS</h3>
