--- a/Demos/SponzaDynamicShadows/index.html
+++ b/Demos/SponzaDynamicShadows/index.html
@@ -18,7 +18,7 @@
     </script>
     <link href="../../css/index.css" rel="stylesheet" />
     <script src="https://code.jquery.com/pep/0.4.0/pep.min.js"></script>
-    <script src="https://spectorcdn.babylonjs.com/spector.bundle.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/spectorjs@0.9.30/dist/spector.bundle.js"></script>
     <script src="../../babylon.js"></script>
     <script src="demo.js"></script>
 </head>
